--- a/localisation/polish/MD_focus_GER_l_polish.yml
+++ b/localisation/polish/MD_focus_GER_l_polish.yml
@@ -2354,7 +2354,7 @@
  GER_commie_people_branch_status: "DZIAŁ 5\nLewicowy ekstremizm"
  GER_MD_OS_TT: "MDOS"
  GER_MD_OS_TT_desc: "MD OS w wersji 1.9.0 to rewolucyjny system operacyjny, który pomaga wyśledzić wszelkiego rodzaju ekstremistów! Tutaj, w MD OS, możesz dostosować wydatki swojego działu i zarządzać sprawami na poziomie działu."
- GER_spending_on_islamists: "Witamy, Panie\n\nProszę poświęcić chwilę na omówienie bieżącego budżetu na walkę\nIslamski ekstremizm. Dostosuj odpowiednio do naszego budżetu i zwracaj uwagę na podejrzaną aktywność. Jeśli wydział ten nie otrzyma odpowiedniego finansowania,\nmoże zostać zamknięty. Nasze komputery są trochę stare, więc aktualizacja wydatków może zająć\dzień."
+ GER_spending_on_islamists: "Witamy, Panie\n\nProszę poświęcić chwilę na omówienie bieżącego budżetu na walkę\nIslamski ekstremizm. Dostosuj odpowiednio do naszego budżetu i zwracaj \nuwagę na podejrzaną aktywność. Jeśli wydział ten nie otrzyma odpowiedniego \nfinansowania,Nasze komputery są trochę stare, więc może to zająć trochę czasu\ndzień przed aktualizacją wydatków."
  GER_combatting_islamist_popup_TT: "Combat_extremists.exe"
  GER_combatting_islamist_popup_desc_TT: "Tutaj możemy dostosować przepisy dotyczące wydatków na walkę z ekstremistami i, jeśli zajdzie taka potrzeba, podjąć dodatkowe działania. Jeśli Departament stanie się zbyt niestabilny i upadnie, nasz naród może skierować się w stronę wojny domowej. W oparciu o wynik wojny domowej radykalne partie i ugrupowania mogą być w stanie przejąć kontrolę nad Niemcami."
  GER_spending_on_islamists_HIGH: "Przeciwdziałaj wydatkom islamistów §WYSOKI§!"
@@ -2368,7 +2368,7 @@
  GER_islamist_department_collapsing: "§RKOLAPACJA§!"
  GER_islamist_department_collapsed: "§RCOLAPSED§!"
  GER_spending_on_islamists_ENDED: "Przeciwdziałanie wydatkom islamistów §RCławienie§!"
- GER_spending_on_rightwing: "Witamy, Panie\n\nProszę poświęcić chwilę na omówienie bieżącego budżetu przeznaczonego na zwalczanie\nprawicowego ekstremizmu. Dostosuj odpowiednio do naszego budżetu i zwracaj uwagę na podejrzaną aktywność. Jeśli wydział ten nie otrzyma odpowiedniego finansowania,\nmoże zostać zamknięty. Nasze komputery są trochę stare, więc aktualizacja wydatków może zająć\dzień."
+ GER_spending_on_rightwing: "Witamy, Panie\n\nProszę poświęcić chwilę na omówienie bieżącego budżetu przeznaczonego na zwalczanie\nprawicowego ekstremizmu. Dostosuj odpowiednio do naszego budżetu i zwracaj \nuwagę na podejrzaną aktywność. Jeśli wydział ten nie otrzyma odpowiedniego finansowania,\nNasze komputery są trochę stare, więc może to zająć trochę czasu\ndzień przed aktualizacją wydatków."
  GER_spending_on_rightwing_HIGH: "Wydatki antynacjonalistyczne §WYSOKIE§!"
  GER_spending_on_rightwing_LOW: "Wydatki przeciwdziałające nacjonalistom §RBARDZO NISKA§!"
  GER_spending_on_rightwing_MED: "Przeciwdziałanie wydatkom nacjonalistów §OMEDIUM§!"
@@ -2378,7 +2378,7 @@
  GER_rightwing_department_collapsing: "§RKOLAPACJA§!"
  GER_rightwing_department_collapsed: "§RCOLAPSED§!"
  GER_spending_on_rightwing_ENDED: "Wydatki nacjonalistyczne §ZWSTRZYMANE§!"
- GER_spending_on_leftwing: "Witamy, Panie\n\nProszę poświęcić chwilę na omówienie bieżącego budżetu przeznaczonego na zwalczanie\nlewicowego ekstremizmu. Dostosuj odpowiednio do naszego budżetu i zwracaj uwagę na podejrzaną aktywność. Jeśli wydział ten nie otrzyma odpowiedniego finansowania,\nmoże zostać zamknięty. Nasze komputery są trochę stare, więc aktualizacja wydatków może zająć\dzień."
+ GER_spending_on_leftwing: "Witamy, Panie\n\nProszę poświęcić chwilę na omówienie bieżącego budżetu przeznaczonego na zwalczanie\nlewicowego ekstremizmu. Dostosuj odpowiednio do naszego budżetu i zwracaj \nuwagę na podejrzaną aktywność. Jeśli wydział ten nie otrzyma odpowiedniego finansowania,\nNasze komputery są trochę stare, więc może to zająć trochę czasu\ndzień przed aktualizacją wydatków."
  GER_spending_on_leftwing_HIGH: "Kontrlewicowe wydatki §WYSOKIE§!"
  GER_spending_on_leftwing_LOW: "Wydatki przeciw lewicy §RBARDZO NISKI§!"
  GER_spending_on_leftwing_MED: "Kontrlewicowe wydatki §OMEDIUM§!"
