GFX and tank modules

--- a/localisation/english/tank_modules_l_english.yml
+++ b/localisation/english/tank_modules_l_english.yml
@@ -512,6 +512,8 @@
  smoke_launchers_desc: "Set of smoke launchers meant to cover vehicle from direct enemy fire.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
  smoke_launchers_2: "Improved Smoke Launchers"
  smoke_launchers_2_desc: "Improved chemical formula covers vehicle from infra-red sights as well.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
+ smoke_launchers_3: "Modern Smoke and Laser Warning System"
+ smoke_launchers_3_desc: "Laser Warning System alert the crew when the vehicle is targeted by a laser guided missile or tank firing control.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
 
  reactive_armor_gen1: "1st Generation ERA"
  reactive_armor_gen1_desc: "Explosive reactive armour (ERA) composes of bricks made of explosives on a metal frame installed on the tank. As the brick is hit by a kinetic penetrator or a shaped charge, the brick explodes, countering the incoming projectile. The first experiments were done in the 60s to counter early shaped charges, but none made it to production.\n\n§GDesigner Hint: Explosive Reactive Armour (ERA) is an easy way to upgrade your tank's armour§!"
@@ -1070,10 +1072,12 @@
  SOV_smoothbore_atgm_gen5: "9M143 Sila"
  SOV_additional_machine_guns: "12.7 mm DShK 1938/46"
  SOV_additional_machine_guns_desc: "The DShK is a heavy machine gun developed by the Soviet Union during World War 2. Despite its age, it is still widely used for anti-air and fire support duties on not just Russian vehicles, but in many other countries as well.\n\n§GDesigner Hint: Adding a heavy machine gun is a cheap way of slightly increasing the tank's capacities against hostile aircraft and soft targets§!"
- SOV_smoke_launchers: "Tucha"
+ SOV_smoke_launchers: "3D6"
  SOV_smoke_launchers_desc: "Tucha is an 81 mm vehicle-mounted grenade launcher developed in the Soviet Union. It is mainly used to fire the 3D6 and 3D6M type smoke grenades.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
- SOV_smoke_launchers_2: "Shtora-1"
- SOV_smoke_launchers_2_desc: "The Shtora-1 'electro-optical active protection system' is an advanced smoke launcher device. It fires the 3D17 smoke grenade, which smokes via red phosphorous. The smoke burns hot enough to mask the tank from thermal imaging.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
+ SOV_smoke_launchers_2: "3D17"
+ SOV_smoke_launchers_2_desc: "Tucha is an 81 mm vehicle-mounted grenade launcher developed in the Soviet Union. It is mainly used to fire the 3D6 and 3D6M type smoke grenades.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
+ SOV_smoke_launchers_3: "Shtora-1"
+ SOV_smoke_launchers_3_desc: "The Shtora-1 'electro-optical active protection system' is an advanced smoke launcher device. It fires the 3D17 smoke grenade, which smokes via red phosphorous. The smoke burns hot enough to mask the tank from thermal imaging.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
  SOV_hardkill_system_gen1: "Arena"
  SOV_hardkill_system_gen1_desc: "The Arena active protection system uses doppler radar to detect incoming missiles. Once a missile is detected, the system fires a rocket to counter the missile.\n\n§GDesigner Hint: A hard-kill system is a good way to bolster our tanks armour to be stronger§!"
  SOV_hardkill_system_gen2: "Afganit"
