--- a/localisation/french/tank_modules_l_french.yml
+++ b/localisation/french/tank_modules_l_french.yml
@@ -467,6 +467,8 @@
  smoke_launchers_desc: "Ensemble de lanceurs de fumée destinés à couvrir le véhicule du feu ennemi direct.\n\n§GConseil de conception : L'ajout de lanceurs de fumée réduit la visibilité de notre char, le rendant meilleur à la fois en défense et en attaque§!"
  smoke_launchers_2: "Lanceurs de Fumée Améliorés"
  smoke_launchers_2_desc: "La formule chimique améliorée couvre également le véhicule des viseurs infrarouges.\n\n§GConseil de conception : L'ajout de lanceurs de fumée réduit la visibilité de notre char, le rendant meilleur à la fois en défense et en attaque§!"
+ smoke_launchers_3: "Fumée moderne et système d'alerte laser"
+ smoke_launchers_3_desc: "Le système d'avertissement laser alerte l'équipage lorsque le véhicule est ciblé par un missile à guidage laser ou un contrôle de tir de char.\n\n§GConseil de conception : L'ajout de lanceurs de fumée réduit la visibilité de notre char, le rendant meilleur à la fois en défense et en attaque§!"
  reactive_armor_gen1: "Blindage Réactif Explosif de 1ère Génération"
  reactive_armor_gen1_desc: "Le Blindage réactif explosif (BRE) est composé de briques faites d'explosifs sur un cadre métallique installé sur le char. Lorsque la brique est frappée par un pénétrateur cinétique ou une charge formée, la brique explose, contrant le projectile entrant. Les premières expériences ont été faites dans les années 60 pour contrer les premières charges formées, mais aucune n'a été mise en production.\n\n§GConseil de conception : Le Blindage Réactif Explosif (BRE) est un moyen facile d'améliorer le blindage de votre char§!"
  reactive_armor_gen2: "Blindage Réactif Explosif de 2ème Génération"
@@ -981,10 +983,12 @@
  SOV_smoothbore_atgm_gen5: "9M143 Sila"
  SOV_additional_machine_guns: "12.7 mm DShK 1938/46"
  SOV_additional_machine_guns_desc: "The DShK is a heavy machine gun developed by the Soviet Union during World War 2. Despite its age, it is still widely used for anti-air and fire support duties on not just Russian vehicles, but in many other countries as well.\n\n§GDesigner Hint: Adding a heavy machine gun is a cheap way of slightly increasing the tank's capacities against hostile aircraft and soft targets§!"
- SOV_smoke_launchers: "Tucha"
+ SOV_smoke_launchers: "3D6"
  SOV_smoke_launchers_desc: "Tucha is an 81 mm vehicle-mounted grenade launcher developed in the Soviet Union. It is mainly used to fire the 3D6 and 3D6M type smoke grenades.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
- SOV_smoke_launchers_2: "Shtora-1"
- SOV_smoke_launchers_2_desc: "The Shtora-1 'electro-optical active protection system' is an advanced smoke launcher device. It fires the 3D17 smoke grenade, which smokes via red phosphorous. The smoke burns hot enough to mask the tank from thermal imaging.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
+ SOV_smoke_launchers_2: "3D17"
+ SOV_smoke_launchers_2_desc: "Tucha is an 81 mm vehicle-mounted grenade launcher developed in the Soviet Union. It is mainly used to fire the 3D6 and 3D6M type smoke grenades.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
+ SOV_smoke_launchers_3: "Shtora-1"
+ SOV_smoke_launchers_3_desc: "The Shtora-1 'electro-optical active protection system' is an advanced smoke launcher device. It fires the 3D17 smoke grenade, which smokes via red phosphorous. The smoke burns hot enough to mask the tank from thermal imaging.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
  SOV_hardkill_system_gen1: "Arena"
  SOV_hardkill_system_gen1_desc: "The Arena active protection system uses doppler radar to detect incoming missiles. Once a missile is detected, the system fires a rocket to counter the missile.\n\n§GDesigner Hint: A hard-kill system is a good way to bolster our tanks armour to be stronger§!"
  SOV_hardkill_system_gen2: "Afganit"
