--- a/localisation/simp_chinese/tank_modules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/tank_modules_l_simp_chinese.yml
@@ -758,10 +758,12 @@
  SOV_smoothbore_atgm_gen5: "9M143 希拉"
  SOV_additional_machine_guns: "12.7 mm DShK 1938/46机枪"
  SOV_additional_machine_guns_desc: "德什卡是苏联在第二次世界大战期间开发的一种重机枪。尽管年代久远，但它仍然被广泛用于防空和火力支援任务，不仅在俄罗斯的车辆上，而且在许多其他国家也是如此。\n\n§G设计师提示：增加一挺重机枪是略微提高坦克对敌方飞机和软目标能力的廉价方法。§!"
- SOV_smoke_launchers: "图恰"
+ SOV_smoke_launchers: "3D6"
  SOV_smoke_launchers_desc: "图恰是苏联开发的一种81毫米车载榴弹发射器。它主要用于发射3D6和3D6M型烟雾弹。\n\n§G设计师提示：添加烟雾发射器可以降低我们坦克的能见度，使其在防御和进攻方面都更胜一筹。§!"
- SOV_smoke_launchers_2: "斯托拉-1"
- SOV_smoke_launchers_2_desc: "斯托拉-1“电光主动防护系统”是一种先进的烟雾发射装置。它发射的是3D17烟雾弹，通过红磷进行熏制。烟雾燃烧的温度足以掩盖坦克的热成像。\n\n§G设计师提示：添加烟雾发射器可以降低我们坦克的能见度，使其在防御和进攻方面都更胜一筹。§!"
+ SOV_smoke_launchers_2: "3D17"
+ SOV_smoke_launchers_2_desc: "图恰是苏联开发的一种81毫米车载榴弹发射器。它主要用于发射3D6和3D6M型烟雾弹。\n\n§G设计师提示：添加烟雾发射器可以降低我们坦克的能见度，使其在防御和进攻方面都更胜一筹。§!"
+ SOV_smoke_launchers_3: "斯托拉-1"
+ SOV_smoke_launchers_3_desc: "斯托拉-1“电光主动防护系统”是一种先进的烟雾发射装置。它发射的是3D17烟雾弹，通过红磷进行熏制。烟雾燃烧的温度足以掩盖坦克的热成像。\n\n§G设计师提示：添加烟雾发射器可以降低我们坦克的能见度，使其在防御和进攻方面都更胜一筹。§!"
  SOV_hardkill_system_gen1: "竞技场"
  SOV_hardkill_system_gen1_desc: "竞技场主动防护系统使用多普勒雷达来探测来袭的导弹。一旦探测到导弹，该系统就会发射火箭弹来拦截导弹。\n\n§G设计师提示：硬杀伤系统是加强我们坦克装甲的一个好方法。§!"
  SOV_hardkill_system_gen2: "阿夫根特"
