--- a/localisation/english/MD_focus_HEZ_l_english.yml
+++ b/localisation/english/MD_focus_HEZ_l_english.yml
@@ -60,8 +60,8 @@
  rushdie_dies_tooltip: "§RThe fate of Rushdie will be decided. Now.§!\n The higher our §YCivilian Intel§! is on the United States, the higher chance of success we have."
  rushdie_dies_tooltip_nodlc: "§RThe fate of Rushdie will be decided. Now.§!\n The higher our §YInfluence§! is on the United States, the higher chance of success we have."
  HEZ_assasination_of_salman_rushdie: "Assassination of Salman Rushdie"
- rushdie_dies2_tooltip: "§ The man in hiding is now free from the consequences of his sins...§!"
- rushdie_survives_tooltip: "§ The bastard lives, but at the cost of his life...§!"
+ rushdie_dies2_tooltip: "§YThe man in hiding is now free from the consequences of his sins...§!"
+ rushdie_survives_tooltip: "§YThe bastard lives, but at the cost of his life...§!"
 
  HEZ_The_End: "§GThe End§!"
  HEZ_The_End_desc: "After many sacrifices and investments throughout southwest Asia, we now have the best opportunity to heavily injure the Saudi beast. These Wahhabi opportunists should see that their money is nothing when we exist. Why? Because if we remove the \"security\" of the Saudi capital, nobody will ever think of \"investing\" in a place that is going to get bombed every week by Hezbollah and its allies. Billions of Dollars shall vanish, NOW!"
@@ -135,7 +135,7 @@
  HEZ_Lebanese_Support_desc: "In times of need, we favored many Lebanese individuals in the Lebanese political playground, and hence, we are going to use the favors. Of course, we shall not forget that, after all, we also have a very huge influence in both Lebanese security and politics."
  HEZ_iranian_aid_income_based_on_influence_TT: "Income from §YLebanese Aid§! Will be based on Lebanese influence:\n§Y0-20%§!: §G+0.25§! Billion Weekly\n§Y21-50%§!: §G+0.50 Billion§! Weekly\n§Y51-100%§!: §G+1.00 Billion§! Weekly"
  HEZ_Lobbying_Public_Support: "Lobbying Public Support"
- HEZ_Lobbying_Public_Support_desc: "Now, with us securing our political authority throughout Lebanon, the time has come to also secure our authority over the Lebanese people. By calling our dear Shi'a supporters and also other supporting minority groups and even political parties, we can show the very popularity and fame of Hezbollah in Lebanon. With doing so, an alarm for Western puppets in Beirut will ring. An alarm that can show them what is going to happen to them, and, § they will understand what is coming for them!"
+ HEZ_Lobbying_Public_Support_desc: "Now, with us securing our political authority throughout Lebanon, the time has come to also secure our authority over the Lebanese people. By calling our dear Shi'a supporters and also other supporting minority groups and even political parties, we can show the very popularity and fame of Hezbollah in Lebanon. With doing so, an alarm for Western puppets in Beirut will ring. An alarm that can show them what is going to happen to them, and, §Ythey will understand what is coming for them!§!"
  HEZ_Request_Election_funds: "Request Election Funds"
  HEZ_Request_Election_funds_desc: "Though we are doing many things to secure our position, we still need one backer for our cause, and as always, that backer is the Islamic Republic of Iran. Surely, they will help us, and they will back us for the unification of Lebanon. Why? Because if Lebanon unites under the banner of Hezbollah, §YA state within the state, becomes a country for itself.§!"
  HEZ_Shias_Lebanon: "Lebanon for Lebanese!"
