--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -221,7 +221,7 @@
  STATE_220: "Khartoum"
  STATE_221: "River Nile"
  STATE_222: "Blue Nile"
- STATE_223: "Kordofan"
+ STATE_223: "North Kordofan"
  STATE_224: "Darfur"
  STATE_225: "Upper Nile"
  STATE_226: "Bahr el Ghazal"
@@ -1181,3 +1181,5 @@
  STATE_1180: "Tambov"
  STATE_1181: "Kaluga"
  STATE_1182: "Washington, D.C."
+ STATE_1183: "South Kordofan"
+ STATE_1184: "White Nile"
