--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1369,6 +1369,42 @@
  GER_Anker_army: "European Anker Army"
  integrate_in_bundeswehr_Structure: "Integrate some of our Allies into our Structures."
 #
+ GER_MIG_29: "The MIG-29"
+ GER_form_Streitkrafte_Basis: "Found Streitkräfte Basis"
+ GER_No_Leopards_in_Rec: "Remove MBT from Reconnaissance Units"
+ GER_Reduce_army_size_III: "Reduction of Army"
+ GER_Introduce_JFST: "Integrate JFST to our Army"
+ GER_Einsatzfuhrungskommando_II: "Found Einsatzführungskommando"
+ GER_Introduce_Taurus: "Integrate the Taurus into the Army"
+ GER_The_Eurofighter: "Purchase the first tranche of Eurofighter Typhoon"
+ GER_The_Tiger: "Purchase the first Tiger attack helicopters"
+ GER_Update_Leopard: "Second tranche of Leopard 2A5 Update"
+ GER_Update_Leopard_II: "Integrate the First Leopard 2A6 into the Army"
+ GER_Heerestruppenkommando: "Found Heerestruppenkommando"
+ GER_refuse_demands: "§HRefuse these Structure§!"
+ GER_end_seperate_Rec: "Integrate Reconnaissance battalions into Brigades"
+ GER_reduce_Conscription: "Suspension of Conscription"
+ GER_Verteidigungspolitische_Richtlinie: "Defence Policy Guidelines"
+ GER_end_Jager: "Restructure Jägerbrigade to Panzergrenadier Brigade"
+ GER_Focus_on_intervention: "Defend our Security outside of Europe"
+ GER_reform_army_training: "Reform Training based on operational Experience"
+ GER_Zentrum_fur_Transformation: "Found Zentrum für Transformation der Bundeswehr"
+ GER_reform_troop_type: "Reform the Troop type"
+ GER_modify_equipment_for_interventions: "Specialize the Equipment for Interventions Operations"
+ GER_new_transport_vehicles: "Develope new transport vehicles"
+ GER_bye_bye_Heeresflugabwehr: "Dissolution of the Heeresfluabwehr"
+ GER_update_seperate_Rec: "Make Panzeraufklärungsbattalione able to performe Aggressive Rreconnaissance"
+ GER_reduce_Conscription_I: "Suspension of Conscription"
+ GER_New_Verteidigungspolitische_Richtlinie: "Defence Policy Guidelines"
+ GER_mountain_Jager: "Restructure Jägerbrigade to Mountaineer"
+ GER_Focus_on_intervention_I: "Defend our Security inside and outside of Europe"
+ GER_reform_army_training_I: "Reform Training based on operational Experience"
+ GER_Zentrum_fur_Transformation_I: "Found Zentrum für Transformation der Bundeswehr"
+ GER_modify_equipment_for_interventions_I: "Specialize the Equipment for Interventions Operations"
+ GER_new_transport_vehicles_I: "Develope new transport vehicles"
+ GER_Specialised_forces: "Reform Our armored forces"
+
+
  GER_HDW_Company: "HDW Export"
  Ger_Submarine_System: "Sell Submarines to [FROM.GetName]"
  GER_ThyssenKrupp_Marinesystem_Company: "ThyssenKrupp Marinesystem Export"
@@ -1491,8 +1527,12 @@
  GER_the_clock_ticks_desc: "Today is the day we begin our operation. With our allies, we will liberate the region from the false state!"
  GER_bundeswehr_reforms_decisions: "Bundeswehr Reform"
  GER_bundeswehr_reforms_decisions_desc: "The §HBundeswehr§!, our nations armed forces is in a dire §Rneed of repair§!. In it's current state, it is quite §Rweak and ineffective§!. But by initiating a series of reforms and changes, we can fix that.\n\n§HBundeswehr Recovery§! will represent the progress we have made in §Hreforming§! the force. Once it reaches §H100%§!, any problems that remain will be §Gresolved§!, and the force can become combat ready."
- GER_Weizsacker_decision: "Bundeswehr Reform"
- GER_Weizsacker_decision_desc: "The §HBundeswehr§!, our nations armed forces is in a dire §Rneed of repair§!. In it's current state, it is quite §Rweak and ineffective§!. But by initiating a series of reforms and changes, we can fix that.\n\n§HBundeswehr Recovery§! will represent the progress we have made in §Hreforming§! the force. Once it reaches §H100%§!, any problems that remain will be §Gresolved§!, and the force can become combat ready."
+ GER_Weizsacker_decision: "Heer der Zukunft"
+ GER_Weizsacker_decision_desc: "§HHeer der Zukunft§! represents a holistic transformation that aims to future-proof the Bundeswehr, ensuring it remains a formidable and reliable force in safeguarding Germany's national security and contributing to global stability. By embracing modernization, flexibility, and international cooperation, the German Army is poised to effectively address contemporary and future threats."
+ GER_Weizsacker_decision_II: "Heer 2010"
+ GER_Weizsacker_decision_II_desc: "The Heer has undergone several structural changes since its inception. The most recent restructuring was initiated with the new version of the Defense Policy Guidelines. The restructuring is said to be completed by 2010 and is referred to as “Heer 2010” or “New Army”. The Heer is divided into several categories, including Intervention Forces, Stabilization Forces, and Support Forces"
+ GER_Weizsacker_decision_III: "Heer 2010"
+ GER_Weizsacker_decision_III_desc: "The Heer has undergone several structural changes since its inception. The most recent restructuring was initiated with the new version of the Defense Policy Guidelines. The restructuring is said to be completed by 2010 and is referred to as “Heer 2010” or “New Army”. The Heer is divided into several categories, including Intervention Forces, Stabilization Forces, and Support Forces"
  GER_allocate_larger_budget: "Allocate a Larger Budget"
  GER_allocate_larger_budget_desc: "We can increase our funding for our troops, speeding up the process of our reforms by improving basic commodities in our military."
  GER_upgrade_military_infrastructure: "Enhance Military Infrastructure"
@@ -2061,6 +2101,29 @@
  germany.565.t: "Our neighbors and treaty partners have summoned our ambassadors."
  germany.565.d: "We've been apprised of an extraordinary achievement by our diplomats. Despite our exceeding the contractual limits, they've succeeded in containing the diplomatic fallout to such an extent that its impact is barely noticeable. This remarkable feat underscores the diplomatic prowess and strategic acumen of our representatives, mitigating potential repercussions and preserving stability in our international relations."
  germany.565.a: "Awesome"
+ Germany.585.t: "Heer der Zukunft"
+ Germany.585.d: "'Heer der Zukunft' is not just a structural overhaul but a holistic transformation that aims to future-proof the Bundeswehr, ensuring it remains a formidable and reliable force in safeguarding Germany's national security and contributing to global stability."
+ Germany.585.a: "we are prepared for new challenges."
+ Germany.580.t: "MIG 29"
+ Germany.580.d: "During the reunification of Germany, we acquired several MiG-29 jets from the former East German stockpiles. As we move forward, it is crucial to determine the future of these aircraft and how they will fit into our current and future defense strategies."
+ Germany.580.a: "Buy more units"
+ Germany.580.b: "Sell them"
+ Germany.580.c: "we need to produce them on our own"
+ Germany.581.t: "Negotiate the purchase"
+ Germany.581.d: "We need to decide with what country´s we should negotiate to increase the amount of our Mig-29 fleet."
+ Germany.581.a: "Negotiate with Russia"
+ Germany.581.b: "Negotiate with former soviet Republics"
+ Germany.581.c: "Negotiate with Ukraine"
+ Germany.582.t: "we dont need them anymore"
+ Germany.582.d: "we came to the result, we dont need a Soviet made plane in our army, now its to decide what we should do."
+ Germany.582.a: "Sell them to Poland."
+ Germany.582.b: "we should simply convert them into scrap metal."
+ Germany.582.c: "Sell to eastern Europe."
+ Germany.583.t: "License Production"
+ Germany.583.d: "We came to the decision, that these airplain could be a important part of our Airforce, so we need to find a way to build the our self"
+ Germany.583.a: "Contact Russia."
+ Germany.583.b: "Develope our own Variant"
+ Germany.583.c: "Develope a Variant with Poland."
 
 # YEARLY EVENTS
  germany_yearly.1.t: "The Völkerstrafgesetzbuch"
