--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -1441,4 +1441,4 @@
  they_lowered_our_debt_tt: "§GOur debt has been lowered by them§!"
  they_refused_lowering_our_debt_tt: "§RThey refused our proposal on lowering our debt§!"
 
- Karalpaks_rebelled_yes: "Karalpakstan has rebelled"
+ Karakalpaks_rebelled_yes: "Karakalpakstan has rebelled"
