--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -600,7 +600,7 @@
  ### Angola ###
 
  ### Armenia ###
- ARM_infantry_weapons: "AKM-47"
+ ARM_infantry_weapons: "AKM"
  ARM_infantry_weapons_desc: "The AKM, developed in 1959, is the most common modernized variant of the AK-47 rifle, developed by Mikhail Kalashnikov. It is much lighter and more accurate during automatic fire than its predecessor."
  ARM_infantry_weapons1: "AK-74"
  ARM_infantry_weapons1_desc: "The AK-74 is developed from the AKM, and features significant upgrades over its predecessor. Notably, it uses 5.45mm cartridges instead of the then standard Warzaw Pact 7.62mm."
@@ -4022,9 +4022,9 @@
  SOV_infantry_weapons: "AKM"
  SOV_infantry_weapons_desc: "The AKM, developed in 1959, is the most common modernized variant of the AK-47 rifle, developed by Mikhail Kalashnikov. It is much lighter and more accurate during automatic fire than its predecessor."
  SOV_infantry_weapons1: "AK-74"
- SOV_infantry_weapons1_desc: "The AK-74 is developed from the AKM, and features significant upgrades over its predecessor. Notably, it uses 5.45mm cartridges instead of the then standard Warsaw Pact 7.62mm."
+ SOV_infantry_weapons1_desc: "The AK-74 is developed from the AKM, and features significant upgrades over its predecessor. Notably, it uses 5.45mm cartridges instead of the then standard Warzaw Pact 7.62mm."
  SOV_infantry_weapons2: "AK-74N"
- SOV_infantry_weapons2_desc: "While the AK-74N is internaly similar to the AK-74, it is equipped with a dovetail mount for optics."
+ SOV_infantry_weapons2_desc: "While the AK-74N is internally similar to the AK-74, it is equipped with a dovetail mount for optics."
  SOV_infantry_weapons3: "AK-74M"
  SOV_infantry_weapons3_desc: "In 1991 the Izhmash factory in the city of Izhevsk began full-scale production of a modernized variant of the AK-74—the AK-74M. Fitted with a lightened bolt and carrier assembly as well as a glass-filled polyamide stock."
  SOV_infantry_weapons4: "AK-103"
@@ -9910,7 +9910,7 @@
  BSH_infantry_weapons1: "AK-74"
  BSH_infantry_weapons1_desc: "The AK-74 is developed from the AKM, and features significant upgrades over its predecessor. Notably, it uses 5.45mm cartridges instead of the then standard Warzaw Pact 7.62mm."
  BSH_infantry_weapons2: "AK-74N"
- BSH_infantry_weapons2_desc: "While the AK-74N is internaly similar to the AK-74, it is equipped with a dovetail mount for optics."
+ BSH_infantry_weapons2_desc: "While the AK-74N is internally similar to the AK-74, it is equipped with a dovetail mount for optics."
  BSH_infantry_weapons3: "AK-74M"
  BSH_infantry_weapons3_desc: "In 1991 the Izhmash factory in the city of Izhevsk began full-scale production of a modernized variant of the AK-74—the AK-74M. Fitted with a lightened bolt and carrier assembly as well as a glass-filled polyamide stock."
  BSH_infantry_weapons4: "AK-103"
@@ -10223,7 +10223,7 @@
  TAT_infantry_weapons1: "AK-74"
  TAT_infantry_weapons1_desc: "The AK-74 is developed from the AKM, and features significant upgrades over its predecessor. Notably, it uses 5.45mm cartridges instead of the then standard Warzaw Pact 7.62mm."
  TAT_infantry_weapons2: "AK-74N"
- TAT_infantry_weapons2_desc: "While the AK-74N is internaly similar to the AK-74, it is equipped with a dovetail mount for optics."
+ TAT_infantry_weapons2_desc: "While the AK-74N is internally similar to the AK-74, it is equipped with a dovetail mount for optics."
  TAT_infantry_weapons3: "AK-74M"
  TAT_infantry_weapons3_desc: "In 1991 the Izhmash factory in the city of Izhevsk began full-scale production of a modernized variant of the AK-74—the AK-74M. Fitted with a lightened bolt and carrier assembly as well as a glass-filled polyamide stock."
  TAT_infantry_weapons4: "AK-103"
@@ -10518,7 +10518,7 @@
  WAG_infantry_weapons1: "AK-74"
  WAG_infantry_weapons1_desc: "The AK-74 is developed from the AKM, and features significant upgrades over its predecessor. Notably, it uses 5.45mm cartridges instead of the then standard Warzaw Pact 7.62mm."
  SOV_infantry_weapons2: "AK-74N"
- SOV_infantry_weapons2_desc: "While the AK-74N is internaly similar to the AK-74, it is equipped with a dovetail mount for optics."
+ SOV_infantry_weapons2_desc: "While the AK-74N is internally similar to the AK-74, it is equipped with a dovetail mount for optics."
  WAG_infantry_weapons3: "AK-74M"
  WAG_infantry_weapons3_desc: "In 1991 the Izhmash factory in the city of Izhevsk began full-scale production of a modernized variant of the AK-74—the AK-74M. Fitted with a lightened bolt and carrier assembly as well as a glass-filled polyamide stock."
  WAG_infantry_weapons4: "AK-103"
