--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -752,7 +752,7 @@
  BLR_APC_2_desc: "The MT-LB was made in the 1970's. Made cheap and fast, the Soviets used these for light anti-air and infantry fighting."
  BLR_APC_2_short: "MT-LB"
  BLR_APC_3: "BTR-70"
- BLR_APC_3_desc: "The BTR-70 has been in use since 1972, in the Soviet-Afgan War they were used to move in troops and then give fire support. The only difference from the BTR-60 is heavier armor."
+ BLR_APC_3_desc: "The BTR-70 has been in use since 1972, in the Soviet-Afghan War they were used to move in troops and then give fire support. The only difference from the BTR-60 is heavier armor."
  BLR_APC_3_short: "BTR-70"
  BLR_APC_4: "BTR-80"
  BLR_APC_4_desc: "The BTR-80 is an 8x8 wheeled amphibious APC designed in the USSR. It was adopted in 1986 and replaced the previous vehicles, the BTR-60 and BTR-70, in the Soviet Army. It was first deployed during the Soviet war in Afghanistan."
@@ -765,7 +765,7 @@
  BLR_APC_6_short: "Volat V2"
 
  BLR_IFV_1: "BMP-1"
- BLR_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Sovier-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
+ BLR_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Soviet-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
  BLR_IFV_1_short: "BMP-1"
  BLR_IFV_2: "BMP-2"
  BLR_IFV_2_desc: "A jihadist's biggest fear is the BMP-2 extremely quick and efficient with its 30mm cannon, and grinding tracks."
@@ -4080,7 +4080,7 @@
  SOV_Heavy_Anti_tank_4: "Volk AT-45"
 
  SOV_IFV_1: "BMP-1"
- SOV_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Sovier-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
+ SOV_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Soviet-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
  SOV_IFV_1_short: "BMP-1"
  SOV_IFV_2: "BMP-2"
  SOV_IFV_2_desc: "A jihadist's biggest fear is the BMP-2 extremely quick and efficient with its 30mm cannon, and grinding tracks."
@@ -9966,7 +9966,7 @@
  BSH_Heavy_Anti_tank_4: "Volk AT-45"
 
  BSH_IFV_1: "BMP-1"
- BSH_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Sovier-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
+ BSH_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Soviet-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
  BSH_IFV_1_short: "BMP-1"
  BSH_IFV_2: "BMP-2"
  BSH_IFV_2_desc: "A jihadist's biggest fear is the BMP-2 extremely quick and efficient with its 30mm cannon, and grinding tracks."
@@ -10077,7 +10077,7 @@
  CRM_Heavy_Anti_tank_4: "Volk AT-45"
 
  CRM_IFV_1: "BMP-1"
- CRM_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Sovier-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
+ CRM_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Soviet-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
  CRM_IFV_1_short: "BMP-1"
  CRM_IFV_2: "BMP-2"
  CRM_IFV_2_desc: "A jihadist's biggest fear is the BMP-2 extremely quick and efficient with its 30mm cannon, and grinding tracks."
@@ -10279,7 +10279,7 @@
  TAT_Heavy_Anti_tank_4: "Volk AT-45"
 
  TAT_IFV_1: "BMP-1"
- TAT_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Sovier-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
+ TAT_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Soviet-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
  TAT_IFV_1_short: "BMP-1"
  TAT_IFV_2: "BMP-2"
  TAT_IFV_2_desc: "A jihadist's biggest fear is the BMP-2 extremely quick and efficient with its 30mm cannon, and grinding tracks."
@@ -10574,7 +10574,7 @@
  WAG_Heavy_Anti_tank_4: "Volk AT-45"
 
  WAG_IFV_1: "BMP-1"
- WAG_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Sovier-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
+ WAG_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Soviet-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
  WAG_IFV_1_short: "BMP-1"
  WAG_IFV_2: "BMP-2"
  WAG_IFV_2_desc: "A jihadist's biggest fear is the BMP-2 extremely quick and efficient with its 30mm cannon, and grinding tracks."
@@ -10758,7 +10758,7 @@ PMR_Heavy_Anti_tank_1_desc: "A heavier missile system firing more than one. The 
 
 
 PMR_IFV_1: "BMP-1"
-PMR_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Sovier-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
+PMR_IFV_1_desc: "The BMP-1 is a Soviet amphibious tracked infantry fighting vehicle. Used in the Soviet-Afghan War to carry troops and fight jihadis. Using a 73mm 2A28, and ATGM launcher."
 PMR_IFV_1_short: "BMP-1"
 PMR_IFV_2: "BMP-2"
 PMR_IFV_2_desc: "A jihadist's biggest fear is the BMP-2 extremely quick and efficient with its 30mm cannon, and grinding tracks."
