Swaping event triggers

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -41,6 +41,7 @@ Achievements:
   - Screen ships are 80% cheaper in peace deals
   - You can no longer form both the United Arab Republic and the Arab-Maghreb Union at the same time
   - Having the International Sanctions idea now prevents you from accessing the weapons market
+  - Added a 750 construction increase per level of network infrastructure to hamper some snowballing in later tiers
 
  Bugfix:
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
@@ -102,7 +103,7 @@ Achievements:
 
  Content:
   - NEW TREES: Libya, Tibesti, African Union (Shared)
-  - NEW REWORKED/IMPROVED: Ukraine, Crimea, Donetsk People's Republic
+  - NEW REWORKED/IMPROVED: Ukraine, Crimea, Donetsk People's Republic, Greece
   - New building "Commercialized Agriculture District"
   - New Internal Factions events and decisions
   - Decoupled the Corruption Events from their old pulse and mixed them with the other random events. It should make it a bit less spammy
@@ -147,6 +148,7 @@ Achievements:
   - Fixed missing localization in the International Systems screen
   - Added country specific division leader ranks to all countries that currently have focus trees
   - Fixed the T-134 being drunk instead of being a bear (changed the hull name)
+  - Improved the Kenyan parties and added descriptions to each of them
 
  Map:
   - USA province level revamp
