Fixed the Egyptian Crash^2

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -218,7 +218,7 @@ v1.10.1
   - Added Belarus to the SCO Map Mode
   - Fixed the localization error for the "Central African Republic Requests Support" to France
   - Fixed the display error in European Council Voting
-  - Fixed the crash from the Egypt buying a carrier variant
+  - Fixed the crash from the Egyptian tree buying a carrier variant
   - Fixed the positioning of the European Union GUI opening button so no overlap for players without La Resistance
   - Fixed French focus about cooperation with the FSA
   - Fixed the Merc SpecOps SandLine Unit template having a weird gap
