--- a/localisation/english/MD_new_traits_l_english.yml
+++ b/localisation/english/MD_new_traits_l_english.yml
@@ -93,6 +93,8 @@
  businessman_desc: "Has experience from a career in business, and has a solid understanding of economics."
  lawyer: "Background: Lawyer"
  lawyer_desc: "Has a background as an lawyer, with an solid understanding of legal frameworks."
+ ex_engineer: "Background: Engineer"
+ ex_engineer_desc: "Educated as an engineer, this person has a solid fundament for understanding the complex systems of governance."
  diplomat: "Background: Diplomat"
  engineer: "Background: Engineer"
  engineer_desc: "Educated as an engineer, this person has a solid fundament for understanding the complex systems of governance."
