--- a/Changelog.txt
+++ b/Changelog.txt
@@ -179,6 +179,9 @@ Achievements:
   - Added ribbon Libyan Order of the Grand Conqueror: "Ally yourself with a Superpower or a Great Power"
   - Added ribbon Libyan Order of Military Merit: "Rverse history and win a war against Egypt and Chad"
 
+ Sound:
+  - NEW VOICELINES: BRA, POR, MEX, AST, GRE, KUW
+
  Quality of Life(QoL):
   - Reformatted the Energy UI so it is more clear with additional and pertinent information
   - Added the version number to the loading screen so you can unfuck your version before it loads all the way in
